# garmin-img-forge

./: .editorconfig  .gitignore  .woodpecker.yml  AGENTS.md  CI-CD.md  CONTRIBUTING.md  LICENSE  README.md
imgforge-cli/: Cargo.toml  README.md  build.rs
imgforge-cli/docs/: validation-basecamp.md
imgforge-cli/src/: cli.rs  error.rs  lib.rs  main.rs  report.rs
imgforge-cli/src/img/: assembler.rs  bit_writer.rs  bitstream.rs  common_header.rs  directory.rs  filesystem.rs  header.rs  lbl.rs  line_preparer.rs  map_object.rs  mod.rs  net.rs  nod.rs  overview.rs  point.rs  polygon.rs  polyline.rs  rgn.rs  splitter.rs  srt.rs  subdivision.rs  tdb.rs  tre.rs  writer.rs  zoom.rs
imgforge-cli/src/parser/: mod.rs  mp_types.rs
imgforge-cli/src/routing/: graph_builder.rs  mod.rs
imgforge-cli/tests/: integration_test.rs
imgforge-cli/tests/fixtures/: bdtopo_tile.mp  extended_types.mp  invalid_coords.mp  labels_accented.mp  minimal.mp  minimal_for_img.mp  multi_type.mp  net_validation.mp  no_img_id.mp  routing.mp  routing_full_validation.mp  routing_graph.mp  tile_a.mp  tile_b.mp  unknown_fields.mp
mpforge-cli/: .gitignore  Cargo.toml  README.md  build.rs  test.yaml
mpforge-cli/doc/: config-schema.md
mpforge-cli/examples/: README.md  bdtopo-d038-config.yaml  bdtopo-d038-rules.yaml  bdtopo-d038-run.sh  bdtopo-mapping.yaml  bdtopo.yaml  france-nord-bdtopo.yaml  france-nord-simple.yaml  header_template.mp  run-france-nord.sh  simple-mapping.yaml  simple-with-mapping.yaml  simple.yaml
mpforge-cli/resources/: README.md
mpforge-cli/rules/: bdtopo-garmin-rules.yaml
mpforge-cli/scripts/fixtures/: create_multi_layers_gpkg.py
mpforge-cli/src/: cli.rs  config.rs  lib.rs  main.rs  report.rs  rules.rs
mpforge-cli/src/pipeline/: geometry_validator.rs  mod.rs  reader.rs  route_params.rs  tiler.rs  writer.rs
mpforge-cli/tests/: cli_tests.rs  config_parsing.rs  export_control.rs  geometry_clipping.rs  geometry_validation.rs  header_config.rs  integration_e2e_validation.rs  integration_export.rs  integration_fme_coverage_audit.rs  integration_report_e2e.rs  integration_rules.rs  integration_rules_admin_hydro.rs  integration_rules_bati_veg_oro.rs  integration_rules_pipeline.rs  integration_rules_services_toponymie.rs  integration_rules_transport.rs  integration_srs.rs  json_report.rs  mp_writer.rs  multi_geometry_decomposition.rs  multi_layers.rs  multi_tile_export.rs  parallel_export.rs  pipeline_integration.rs  progress_bar.rs  rtree_indexing.rs  source_reading.rs  tile_assignment.rs  tile_centric_pipeline.rs  tile_naming.rs  tiling_algorithm.rs  type_filtering.rs
mpforge-cli/tests/common/: mod.rs
ogr-polishmap/: .gitignore  CMakeLists.txt  INSTALL.md  README.md  count_all_tests.sh  pytest.ini  run_regression_tests.sh
ogr-polishmap/doc/: .gitkeep  format-specification.md  garmin-types.md  gdal-compliance-checklist.md  polishmap.rst
ogr-polishmap/doc/testing/: compilation-tests.md
ogr-polishmap/docs/: LESSONS_LEARNED.md
ogr-polishmap/examples/: .gitkeep  README.md  bdtopo-mapping.yaml  convert_geojson_to_mp.py  convert_mp_to_geojson.py  read_mp.py  write_mp.py
ogr-polishmap/src/: ogrpolishmapdatasource.cpp  ogrpolishmapdatasource.h  ogrpolishmapdriver.cpp  ogrpolishmapdriver.h  ogrpolishmaplayer.cpp  ogrpolishmaplayer.h  polishmapfieldmapper.cpp  polishmapfieldmapper.h  polishmapfields.h  polishmapparser.cpp  polishmapparser.h  polishmapwriter.cpp  polishmapwriter.h  polishmapyamlparser.cpp  polishmapyamlparser.h
ogr-polishmap/test/: README-test-corpus.md  conftest.py  test_cgpsmapper_compilation.sh  test_create.cpp  test_dataset_layers.cpp  test_driver_metadata.cpp  test_edge_cases.py  test_error_recovery.py  test_extended_attributes.cpp  test_filters.cpp  test_header.cpp  test_mkgmap_compilation.sh  test_ogr2ogr_integration.sh  test_parser_and_open.cpp  test_performance_parsing.py  test_poi_layer.cpp  test_poi_write.cpp  test_polygon_layer.cpp  test_polygon_write.cpp  test_polyline_layer.cpp  test_polyline_write.cpp  test_python_bindings.py  test_real_world_integration.cpp  test_valid_corpus.py  test_write_performance.py
ogr-polishmap/tools/: generate_error_recovery_corpus.py  generate_perf_test_data.py  generate_valid_complex_corpus.py
tools/imgforge/: Cargo.toml  README.md  build.rs
tools/imgforge/examples/: dump_overview_artifacts.rs  hybrid_test.rs  quick_hybrid.rs
tools/imgforge/src/: cli.rs  error.rs  lib.rs  main.rs  report.rs
tools/imgforge/tests/: corpus_parsing.rs  gmp_integration_test.rs  integration_test.rs  multi_data_e2e.rs  overview_integration.rs  typ_integration_test.rs
tools/mpforge/: .gitignore  Cargo.toml  README.md  build.rs
tools/mpforge/examples/: README.md  bdtopo-d038-config.yaml  bdtopo-d038-run.sh  bdtopo-mapping.yaml  france-nord-simple.yaml  run-france-nord.sh  simple-mapping.yaml
tools/mpforge/resources/: README.md
tools/mpforge/rules/: bdtopo-garmin-rules.yaml
tools/mpforge/src/: cli.rs  config.rs  error.rs  main.rs  proj_init.rs  report.rs  rules.rs
tools/mpforge/tests/: cli_tests.rs  config_parsing.rs  export_control.rs  geometry_clipping.rs  geometry_validation.rs  header_config.rs  integration_e2e_validation.rs  integration_export.rs  integration_fme_coverage_audit.rs  integration_multi_data.rs  integration_multi_data_cp1252_label.rs  integration_multi_data_intersections.rs  integration_overview_levels.rs  integration_report_e2e.rs  integration_rules.rs  integration_rules_admin_hydro.rs  integration_rules_pipeline.rs  integration_rules_services_toponymie.rs  integration_rules_transport.rs  integration_srs.rs  json_report.rs  mp_writer.rs  multi_geometry_decomposition.rs  multi_layers.rs  multi_tile_export.rs  parallel_export.rs  pipeline_integration.rs  progress_bar.rs  rtree_indexing.rs  source_reading.rs  spatial_filter.rs  tile_assignment.rs  tile_centric_pipeline.rs  tile_naming.rs  tiling_algorithm.rs  type_filtering.rs
tools/ogr-garminimg/: CMakeLists.txt  README.md
tools/ogr-garminimg/src/: garminimgbitreader.cpp  garminimgbitreader.h  typ2qml.cpp  (+37 more)
tools/typforge/: Cargo.toml  README.md  build.rs
(+837 files in other folders)
