[package]
name = "mpforge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gdal = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
geo = "0.28"
rstar = "0.12"
rayon = "1.11"
num_cpus = "1.16"
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.18"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.14"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
tracing-test = "0.2"

[profile.release]
lto = true           # Link-Time Optimization pour réduire la taille
codegen-units = 1    # Meilleure optimisation (mais compile plus lent)
strip = true         # Supprime les symboles de debug
opt-level = "z"      # Optimise pour la taille
