[package]
name = "imgforge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1.5"
indicatif = "0.17"
proj4rs = "0.1"
encoding_rs = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
