[package]
name = "typforge"
version = "0.1.0"
edition = "2021"

[features]
default = []
ui = ["dep:slint", "dep:rfd"]

[[bin]]
name = "typforge"
path = "src/main.rs"
required-features = ["ui"]

[dependencies]
slint = { version = "1.8", optional = true }
rfd = { version = "0.15", optional = true }
quick-xml = "0.39"
encoding_rs = "0.8"
byteorder = "1.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
thiserror = "2.0"

[build-dependencies]
slint-build = "1.8"

[dev-dependencies]
tempfile = "3.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
